# tfa

./: .gitignore  README.md  banned_codes_dict.txt  code_generator.py  constants.py  db.dir  main.py  pyproject.toml
src/tfa/: __main__.py  code_generator.py  constants.py  totp_test.py
