[build-system]
requires = ["setuptools>=61.2", "wheel", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tfa"
description = "A two-factor authentication command-line utility"
authors = [
  {name = "Marlon Mata", email = "marlon.mata@proton.me"},
]
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

keywords = ["security", "passphrases"]
classifiers = [
  "Topic :: Utilities",
  "Programming Language :: Python",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.optional-dependencies]
dev = [
  "black==23.10.0",
  "isort==5.12.0",
  "mypy==1.6.1",
  "pylint==3.0.1",
  "typing_extensions==4.9.0",
  "pytest>=7.4.4"
]

[project.urls]
"Repository" = "https://github.com/mm-cr/tfa.git"

[project.scripts]
tfa = "tfa.__main__:main"

